<resources>


    <string name="app_name">OYP</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_users">Users</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_activity">Activity</string>
    <string name="title_more">More</string>
    <string name="tandctextview">tAndCTextView</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="username">username</string>
    <string name="household">household</string>
    <string name="new_registration">New Registration</string>
    <string name="create_household">Create Household</string>
    <string name="email">eMail</string>
    <string name="login">Login</string>
    <string name="household_name">Household name</string>
    <string name="passwordlogin">Password</string>
    <string name="log_in">Log in</string>
    <string name="add_new_user">Add new user</string>
    <string name="create_user">Create User</string>
    <string name="female">Female</string>
    <string name="add_user">add user</string>
    <string name="choose_your_user">Choose your user</string>
    <string name="create_new_user">Create new user</string>
    <string name="welcome_home">Welcome Home</string>
    <string name="open_tasks">Open tasks</string>
    <string name="show_me_closed_tasks">Show me closed tasks</string>
    <string name="create_task">Create task</string>
    <string name="create_task2">Create Task</string>
    <string name="title_createtask">Create Task</string>

    // UserAnsicht Daten hinzufügen
    <string-array name="uNames">
        <item>Patricia</item>
        <item>Paul</item>
        <item>Julia</item>
    </string-array>

    <string-array name="uPoints">
        <item>85</item>
        <item>50</item>
        <item>30</item>
    </string-array>


</resources>
